themes/smol/assets/scss/main.scss
/* ... */
p.article-info {
  color: var(--secondary-color);
  margin-top: 0;

  @media screen and (max-width: 600px) {
    margin-top: 15px;
  }

  .unlisted-notice {
    border-radius: 5px;
    background-color: #df8e1d;
    color: black;
    padding: 5px 0.5rem;
  }
}

.hidden {
  display: none;
}

code,
tt,
kbd,
pre {
  font-family: Iosevka, monospace;
}

main *:not(pre)>code,
tt,
kbd {
  border-radius: 5px;
  background-color: var(--preformatted-bg-color);
  padding: 1px 0.5rem;
}

pre {
  border-radius: 5px;
  border: 1px solid var(--preformatted-border-color);
  padding: 1rem;
  overflow-x: auto;

  code {
    display: inline-block;
  }
}

article {
  padding: 24px 0;
}

.center {
  display: block;
  margin-left: auto;
  margin-right: auto;
  width: 100%;
}

blockquote {
  border-left: 0.7em solid black;
  padding: 0.5em 0 0.5em 1em;

  *:first-child {
    margin-top: 0;
  }

  *:last-child {
    margin-bottom: 0;
  }
}

figure + figure {
  margin-top: 1rem;
}

figure {
  background-color: var(--figure-bg-color);
  padding: 5px;
  margin: 0 auto;
  border-radius: 8px;

  * {
    margin: 0;
  }

  figcaption {
    padding: 0.4rem 0.5rem 0.2rem 0;
  }
}

picture,
.video-container {
  margin: 0 auto;
  display: block;
  overflow: hidden;
  border-radius: 8px;

  &.no-zoom img {
    &:hover,
    &:active,
    &:focus {
      transform: none;
    }
  }

  &.no-dim img {
    opacity: 1;
  }
}

img {
  display: block;
  transition-property: opacity, transform;
  transition-duration: 0.2s;
  transition-timing-function: ease;
  max-width: 100%;
  height: auto;
  opacity: var(--image-opacity);

  &:hover,
  &:active,
  &:focus {
    opacity: 1;
    transform: scale(var(--hover-scale, 1.02));
  }

  &.medium-zoom-image {
    cursor: zoom-in;
  }

  &.medium-zoom-image--opened {
    cursor: zoom-out;
    opacity: 1;
  }
}

video {
  display: block;
  transition-property: transform;
  transition-duration: 0.2s;
  transition-timing-function: ease;
  max-width: 100%;
  height: auto;

  &:hover,
  &:active,
  &:focus {
    transform: scale(1.02);
  }
}

.align-center {
  display: block;
  margin: 0 auto;

  &.figure {
    margin: 1em auto;
    text-align: center;
  }
}

/* Image Galleries */
table.gallery {
  tr {
    max-width: 60%;

    td {
      vertical-align: middle;

      p {
        margin: 0;
      }
    }
  }
}

div.gallery {
  display: flex;
  flex-direction: horizontal;
  gap: 4px;

  p {
    margin: 0;
  }
}

details:not(.normal-expander) {
  >summary {
    &::marker {
      display: none;
    }

    &::details-marker {
      display: none;
    }

    &:before {
      content: '▶';
    }
  }

  &:open>summary:before {
    content: '▼';
  }
}

details.youtube-expander {
  margin: 1em 0;

  >summary {
    display: flex;
    align-items: center;
    gap: 0.5rem;

    background-color: var(--expander-summary-color);
    padding: 1em;

    svg {
      color: #e52d27;
      font-size: 1.1em;
    }
  }

  div.lite-youtube-fallback {
    background: black;
    padding: 4rem;
    text-align: center;
    font-size: 1.5rem;

    a {
      text-decoration: none;
    }
  }
}

details.advent-of-code-part-expander {
  border: 1px solid #ccc;
  margin: 1em 0;
  padding: 1em;

  >summary {

    h3 {
      display: inline;
    }
  }
}

details.portfolio-item {
  margin-bottom: 1em;

  >summary {
    background-color: var(--expander-summary-color);
    display: grid;
    padding: 0.5rem 1rem 0.5rem 0.75rem;
    gap: 0.2rem 0.5rem;
    grid-template:
      "expander icon title       dates      " auto
      "expander icon description description" auto
      / 1rem 2.5rem auto auto;

    &:before {
      grid-area: expander;
      display: flex;
      align-items: center;
    }

    div.company-logo {
      grid-area: icon;
      display: flex;
      align-items: center;
      justify-content: center;

      img {
        opacity: 1;

        &.with-bg {
          border-radius: 0.5rem;
          background-color: white;
        }
      }
    }

    h3 {
      grid-area: title;
      margin: 0;
    }

    >span {
      text-align: right;
      grid-area: dates;
      font-size: 0.9em;
      color: var(--secondary-color);
    }

    p {
      grid-area: description;
      margin: 0;

      i.description-icon {
        margin-right: 0.35rem;
      }
    }

    &:hover {
      div.company-logo img {
        transform: scale(1.2);
      }

      .permalink {
        opacity: 1;
      }
    }
  }

  &.no-logo {
    >summary {
      grid-template:
        "expander title       dates      " auto
        "expander description description" auto
        / 1rem auto auto;
    }
  }

  >div {
    margin-left: 2em;
  }

  @media screen and (max-width: 540px) {
    >summary {
      grid-template:
        "expander icon title      " auto
        "expander icon dates      " auto
        "expander icon description" auto
        / 1rem 2.5rem auto;

      span {
        text-align: left;
      }
    }

    &.no-logo {
      >summary {
        grid-template:
          "expander title      " auto
          "expander dates      " auto
          "expander description" auto
          / 1rem auto;
      }
    }
  }
}

details.portfolio-more-items {
  margin-bottom: 1em;

  >summary {
    display: flex;
    justify-content: center;

    >div {
      background-color: var(--expander-summary-color);
      border-radius: 0.5rem;
      padding: 0.5rem 2rem;
      cursor: pointer;
      font-weight: bold;
      font-size: 1.1rem;
    }

    &:before {
      content: none;
    }
  }

  &:open>summary {
    display: none;
  }
}
/* ... */

